--- a/donnéesPerso.html
+++ b/donnéesPerso.html
@@ -12,7 +12,7 @@
     <meta name="description" content="L'association des étudiants d'EPSI WIS sert de relai entre les étudiants, ainsi avec nos différantes activitées nous voulons épanouir les étudiants">
     <meta property="og:locale" content="fr_FR">
     <meta property="og:url" content="http://46.105.124.159/BDE/home.html/">
-    <meta property="og:site_name" content="CityFitness">
+    <meta property="og:site_name" content="BDE de epsi wis">
     <meta name="twitter:site" content="@YannOlimbo">
     <meta property="og:type" content="site vitrine">
     <meta name="twitter:label1" content="Écrit par">
